# abc-demo-build-with-aot-universal

./: .clang-format  .editorconfig  .gitignore  BUILD.bazel  README.md  WORKSPACE  angular-fix-for-closure.sh  angular.tsconfig.json  closure.browser.conf  compress.sh  es6_consumer.bzl  package.json  tsconfig.json
src/: BUILD.bazel  index.html  main.browser.ts  main.server.ts  server-polyfills.ts  server-vendor.ts  tsconfig.json
src/app/: BUILD.bazel  app.component.html  app.component.scss  app.component.ts  app.module.ts  browser-app.module.ts  server-app.module.ts
src/browser/: BUILD.bazel
src/browser/app/: BUILD.bazel  app.component.ts
src/server/: BUILD.bazel
src/server/app/: BUILD.bazel  server-app.module.ts
utils/: closure-require-replace.js
