package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
  name = "src",
  srcs = glob(["*.ts"]),
  deps = ["//src/app"],
  tsconfig = ":tsconfig.json",
  prod_output = True,
)

load("@build_bazel_rules_webpack//:defs.bzl", "webpack_bundle")

webpack_bundle(
  name = "browser",
  entry_point = "main.browser.js",
  target = "web",
)

webpack_bundle(
  name = "server",
  entry_point = "main.server.js",
  target = "node",
)
