package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")

sass_binary(
  name = "app-styles",
  src = "app.component.scss",
)

ng_module(
  name = "app",
  srcs = glob(["*.ts"]),
  tsconfig = "//src:tsconfig.json",
  assets = [":app-styles.css"],
)
